Fix Transform effect when current clip is not below play head / timeline cursor

BUG: 508818